# lyli

./: .gitignore  .kateconfig  .travis.yaml  .travis.yml  51-lytro.rules  CMakeLists.txt  README.md  astylerc  calibrator.cpp  calibrator.h  camera.cpp  camera.h  context.h  file.cpp  file.h  filelist.cpp  filelist.h  filelistparser.cpp  filelistparser.h  main.cpp  rawimage.cpp  rawimage.h  tau-config
CMakeModules/: FindJsonCpp.cmake
calibration/: CMakeLists.txt  calibrationdata.cpp  calibrationdata.h  calibrator.cpp  calibrator.h  exception.cpp  fftpreprocessor.cpp  fftpreprocessor.h  gridmapper.cpp  gridmapper.h  gridmath.cpp  lensdetector.cpp  lensdetector.h  lensdetectoriface.h  lensfilter.cpp  lensfilter.h  line.h  linecomputer.h  linecomputerimpl.h  linegrid.cpp  linegrid.h  linemap.cpp  linemap.h  mathutil.h  pointgrid.cpp  pointgrid.h  preprocessor.cpp  preprocessor.h  serialization.cpp  serialization.h  stdpreprocessor.cpp  stdpreprocessor.h  subgrid.cpp  subgrid.h
debian/: changelog  control  copyright  liblyli.install  lyli-qt.install  lyli.install
debug/: lylidebug.h
filesystem/: CMakeLists.txt  file.cpp  file.h  filelist.cpp  filelist.h  filelistparser.cpp  filelistparser.h  filesystemaccess.cpp  image.cpp  imageptr.cpp  photo.cpp  photo.h  photoptr.cpp  photoptr.h
image/: CMakeLists.txt  json.txt  jsonast.py  jsongen.py  jsonparser.py  jsontemplates.py  lightfieldimage.cpp  lightfieldimage.h  metadata.cpp  metadata.h  rawimage.cpp  rawimage.h
lib/: CMakeLists.txt  camera.h  context.cpp
lib/calibration/: CMakeLists.txt  exception.h  fftpreprocessor.h  gridmath.h  lensdetector.cpp  lensfilter.cpp  lensfilter.h  line.h  pointgrid.h  preprocessor.h  serialization.h  subgrid.h
lib/filesystem/: CMakeLists.txt  filelist.h  filesystemaccess.h  image.h  imageptr.h  photo.cpp
lib/image/: lightfieldimage.h  metadata.cpp  metadata.h  metadata.txt  rawimage.h
libusbpp/: CMakeLists.txt  README  buffer.h  context.h  device.cpp  device.h  hiddevice.cpp  hiddevice.h  hidreport.cpp  hidreport.h  mscbw.cpp  mscbw.h  mscsw.cpp  mscsw.h  msdevice.cpp  msdevice.h  msscsiinquiry.cpp  msscsiinquiry.h  msscsiinquiryresponse.cpp  msscsiinquiryresponse.h  testhid.cpp
tools/: CMakeLists.txt  pycppjson.py
tools/calibstats/: CMakeLists.txt  main.cpp
tools/pycppjson/: jsongen.py  jsontemplates.py
ui/: CMakeLists.txt  cameraform.cpp  cameraform.h  cameraform.ui  cameralistmodel.cpp  cameralistmodel.h  imagedownloader.cpp  imagedownloader.h  imagelistdelegate.cpp  imagelistdelegate.h  imagelistitem.cpp  imagelistitem.h  imagelistmodel.cpp  imagelistmodel.h  lytroimage.cpp  lytroimage.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  progressbar.cpp  progressbar.h  qml.qrc  thumbnailprovider.cpp  thumbnailprovider.h  viewerform.cpp  viewerform.h  viewerform.ui
ui/calibrationwizard/: CMakeLists.txt  calibrationwizard.cpp  calibrationwizard.h  pagecachedir.ui  pagefinish.ui  pagestart.ui
ui/cameraview/: CMakeLists.txt  calibrationchecker.cpp  calibrationchecker.h  cameracalibrator.cpp  cameracalibrator.h  cameracontext.cpp  cameracontext.h  cameraform.cpp  cameraform.h  cameraform.ui  cameralistmodel.cpp  cameralistmodel.h  context.cpp  context.h  imagedownloader.h  imagelistdelegate.cpp  imagelistitem.h  imagelistmodel.cpp  imagelistmodel.h
ui/config/: CMakeLists.txt  lyliconfig.cpp  lyliconfig.h
ui/imageview/: CMakeLists.txt  lytroimage.cpp  viewerform.h
ui/qml/: .kateconfig  CameraCamerasForm.qml  CameraForm.qml  CameraImagesForm.qml  ImageListForm.qml  ViewerForm.qml  main.qml
usbpp/: CMakeLists.txt  buffer.h  cbw.cpp  cbw.h  context.cpp  context.h  csw.cpp  csw.h  device.cpp  device.h  msdevice.cpp  msdevice.h  scsiinquiry.cpp  scsiinquiry.h  scsiinquiryresponse.cpp  scsiinquiryresponse.h
